tests/js/success/cfg_if4.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ***************************************************************************** */
var alphabet = "U";
if (alphabet == "A") {}
if (alphabet == "B")
if (alphabet == "C") ; 
if (alphabet == "D")
if (alphabet == "U")
if (alphabet == "V")
if (alphabet == "W") {}
if (alphabet == "X") ;;
